<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <ImageView
        android:id="@+id/imgViewInterest"
        android:layout_width="47dp"
        android:layout_height="47dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="@+id/editNumberRate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editNumberRate"
        app:layout_constraintTop_toTopOf="@+id/editNumberRate"
        app:srcCompat="@drawable/ic_baseline_info_24"
        tools:srcCompat="@drawable/ic_baseline_info_24" />

    <EditText
        android:id="@+id/editNumberCarPrice"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="33dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/price"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/imgViewInterest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editNumberRate"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="35dp"
        android:ems="10"
        android:hint="@string/rate"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="@+id/editNumberCarPrice"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editNumberCarPrice"
        app:layout_constraintTop_toBottomOf="@+id/editNumberCarPrice" />

    <EditText
        android:id="@+id/editNumberPeriod"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="12dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/loan"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="@+id/imgViewInterest"
        app:layout_constraintTop_toBottomOf="@+id/imgViewInterest" />

    <EditText
        android:id="@+id/editNumberDwnPymt"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/down_pymt"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="@+id/editNumberPeriod"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editNumberPeriod"
        app:layout_constraintTop_toBottomOf="@+id/editNumberPeriod" />

    <EditText
        android:id="@+id/editNumberInc"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/inc"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="@+id/editNumberDwnPymt"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editNumberDwnPymt"
        app:layout_constraintTop_toBottomOf="@+id/editNumberDwnPymt" />

    <Button
        android:id="@+id/calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="168dp"
        android:text="@string/calculate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.196"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNumberInc"
        app:layout_constraintVertical_bias="0.027" />

    <Button
        android:id="@+id/btn_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.804"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNumberInc"
        app:layout_constraintVertical_bias="0.705" />

    <TextView
        android:id="@+id/loanAmt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/editNumberInc"
        app:layout_constraintStart_toStartOf="@+id/editNumberInc"
        app:layout_constraintTop_toBottomOf="@+id/editNumberInc" />

    <TextView
        android:id="@+id/interest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="@+id/loanAmt"
        app:layout_constraintStart_toStartOf="@+id/loanAmt"
        app:layout_constraintTop_toBottomOf="@+id/editNumberInc" />

    <TextView
        android:id="@+id/mthPymt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/interest"
        app:layout_constraintStart_toStartOf="@+id/interest"
        app:layout_constraintTop_toBottomOf="@+id/interest" />

    <TextView
        android:id="@+id/eligible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/mthPymt"
        app:layout_constraintStart_toStartOf="@+id/mthPymt"
        app:layout_constraintTop_toBottomOf="@+id/mthPymt" />

</androidx.constraintlayout.widget.ConstraintLayout>