<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="interestDataSet" type="com.example.lab4.InterestDataSet" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SecondFragment">

        <TextView
            android:id="@+id/textview_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/button_second"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/close"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.8"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="121dp"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/bank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="33dp"
            android:layout_marginEnd="80dp"
            android:text="@string/bank"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/rate"
            android:layout_width="108dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="33dp"
            android:layout_marginEnd="64dp"
            android:text="@string/rate"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewBankName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="43dp"
            android:text="@{interestDataSet.bank}"
            app:layout_constraintEnd_toEndOf="@+id/bank"
            app:layout_constraintStart_toStartOf="@+id/bank"
            app:layout_constraintTop_toBottomOf="@+id/bank" />

        <TextView
            android:id="@+id/textViewRatePercent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{interestDataSet.rate}"
            app:layout_constraintBottom_toBottomOf="@+id/textViewBankName"
            app:layout_constraintEnd_toEndOf="@+id/rate"
            app:layout_constraintStart_toStartOf="@+id/rate"
            app:layout_constraintTop_toTopOf="@+id/textViewBankName" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>